# secret-scrub

./: .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CONTEXT.md  Cargo.toml  README.md
.claudedocs/: 360-REPORT.md  ACTION-PLAN.md
.scratch/secretscrub/: BUSINESS-PLAN.md  COMPETITIVE.md  ISSUES.md  ODDS-IMPROVEMENT.md  PRD.md  TRUST.md  VALIDATION.md
.scratch/secretscrub/issues/: 01-scaffold-core-cli-first-redact.md  02-placeholders-value-correlation.md  03-builtin-detector-pack.md  04-structured-json-yaml-env.md  05-atomic-export-safety-summary.md  06-folder-workspace-bundle.md  07-cli-exit-codes-findings-json.md  08-streaming-cancel-limits.md  09-desktop-scan-export-mvp.md  10-desktop-review-trust-a11y.md  11-recipient-profiles.md  12-security-regression-and-baseline.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  mcp.rs
crates/cli/tests/: cli_blackbox.rs  mcp_blackbox.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: attest.rs  cancel.rs  detect.rs  export.rs  format.rs  lib.rs  limits.rs  placeholder.rs  rulepack.rs  scrub.rs  structure.rs  types.rs  workspace.rs
crates/core/tests/: golden_fixtures.rs  structure_and_workspace.rs
design-system/secretscrub/: MASTER.md
docs/: HOW-TO-VERIFY.md  detector-changelog.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
fixtures/: aws_log.txt  bad.json  false_positive.txt  multi_secret.txt  repeated_aws.txt  sample.env  sample.json  sample.yaml
landing/: README.md  index.html  main.js  styles.css
