[workspace]
resolver = "2"
members = ["crates/core", "crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["SecretScrub contributors"]
repository = "https://github.com/Bharath-code/secret-scrub"

[workspace.dependencies]
secretscrub-core = { path = "crates/core" }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_norway = "0.9"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
tempfile = "3.14"
walkdir = "2.5"
sha2 = "0.10"
hex = "0.4"
