[package]
name = "secretscrub-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local-first redaction engine for SecretScrub"
readme = "README.md"

[dependencies]
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
