[package]
name = "secretscrub-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local-first redaction engine for SecretScrub"
readme = "README.md"

[dependencies]
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
